# VideoFX-rs

./: .gitignore  LICENSE  README.md
crates/ae-plugin/: Cargo.toml  build.rs
crates/ae-plugin/src/: lib.rs
crates/aviutl2-plugin/: Cargo.toml  build.rs
crates/aviutl2-plugin/shaders/: standard.hlsl
crates/aviutl2-plugin/src/: aul2.rs  lib.rs  params.rs
crates/example-effects/: Cargo.toml
crates/example-effects/shaders/: solid_blend.wgsl
crates/example-effects/src/: color_adjustment.rs  lib.rs  solid_blend.rs
crates/example-effects/src/gpu/: color_adjustment.rs  device.rs  mod.rs  solid_blend.rs
crates/example-effects/src/i18n/: ja.rs  keys.rs  ko.rs  mod.rs  zh_cn.rs
crates/example-effects/src/settings/: color_adjustment.rs  framework.rs  mod.rs  solid.rs
crates/example-effects/tests/: color_adjustment_tests.rs  settings_tests.rs  solid_blend_tests.rs
crates/macros/: Cargo.toml
crates/openfx-plugin/: Cargo.toml  build.rs
crates/openfx-plugin/src/: bindings.rs  lib.rs
crates/videofx/: Cargo.toml
crates/videofx/src/: lib.rs
crates/videofx/src/gpu/: mod.rs  solid_blend.rs  standard.rs
crates/videofx/src/i18n/: i18n_keys.rs  keys.rs  lang_template.rs  mod.rs  zh_cn.rs
crates/videofx/src/settings/: framework.rs  mod.rs  solid.rs  standard.rs
xtask/: Cargo.toml
xtask/src/: build_aviutl2_plugin.rs  build_ofx_plugin.rs  macos_ae_plugin.rs
