[package]
name = "video-fx-aviutl2-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
video-fx = { path = "../videofx", default-features = false }
aviutl2 = "0.31"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
